// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineVisualizationGraph should match the previous pipeline snapshot 1`] = `
<div
  className="odc-pipeline-vis-graph"
>
  <div
    className="odc-pipeline-vis-graph__stages"
  >
    <div
      className="odc-pipeline-vis-graph__stage"
    >
      <ul
        className="odc-pipeline-vis-graph__stage-column"
      >
        <li
          className="odc-pipeline-vis-task"
        >
          <span>
            start-app
          </span>
        </li>
      </ul>
    </div>
    <div
      className="odc-pipeline-vis-graph__stage is-parallel"
    >
      <ul
        className="odc-pipeline-vis-graph__stage-column"
      >
        <li
          className="odc-pipeline-vis-task"
        >
          <span>
            test-app-1
          </span>
        </li>
        <li
          className="odc-pipeline-vis-task"
        >
          <span>
            test-app-2
          </span>
        </li>
      </ul>
    </div>
    <div
      className="odc-pipeline-vis-graph__stage is-parallel"
    >
      <ul
        className="odc-pipeline-vis-graph__stage-column"
      >
        <li
          className="odc-pipeline-vis-task"
        >
          <span>
            build-image-1
          </span>
        </li>
        <li
          className="odc-pipeline-vis-task"
        >
          <span>
            build-image-2
          </span>
        </li>
      </ul>
    </div>
    <div
      className="odc-pipeline-vis-graph__stage"
    >
      <ul
        className="odc-pipeline-vis-graph__stage-column"
      >
        <li
          className="odc-pipeline-vis-task"
        >
          <span>
            deploy
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PipelineVisualizationGraph should match the previous pipelineRun snapshot 1`] = `
<div
  className="odc-pipeline-vis-graph"
>
  <div
    className="odc-pipeline-vis-graph__stages"
  >
    <div
      className="odc-pipeline-vis-graph__stage is-parallel"
    >
      <ul
        className="odc-pipeline-vis-graph__stage-column"
      >
        <li
          className="odc-pipeline-vis-task"
        >
          <span>
            build-skaffold-web
          </span>
          <span
            className="is-done"
          >
            Succeeded
          </span>
          <span>
            32s
          </span>
        </li>
        <li
          className="odc-pipeline-vis-task"
        >
          <span>
            deploy-web
          </span>
          <span
            className="is-done"
          >
            Succeeded
          </span>
          <span>
            32s
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
